landing page fix (#35)
* fixed file container kinda -- brief is messed up but will correct it once i get andrews changes

* ok i fixed it

* fix deploy ?

* add rollup override to package

* everything fixed eccerpt brief

* m,opved bingus

* more edits to landing page

* moved bingus a tiny bit

---------

--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -1,13 +1,7 @@
 
-  .img-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+.img-container img {
+    width: 60vh;
+    margin-top: 5vh;
+    margin-left: 10vh;
   }
-  
-  .img-container img {
-    width: 400px;
-    height: 600px;
-  }
+
