--- a/src/styles/results.css
+++ b/src/styles/results.css
@@ -1,5 +1,5 @@
 /* Container */
-.container {
+.container2 {
   display: flex;
   height: 100%;
 }
