--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,15 +3,15 @@
 }
 
 .container {
-    position: absolute;
-    top: 55%;
-    left: 50%;
+    position: relative !important;
     justify-content: center;
-    transform: translate(-50%, -50%);
     background-color: #D8D7D7; 
-    border-top-right-radius: 20px; 
-    width: 175vh; 
-    height: 75vh; 
+    border-top-right-radius: 20px !important;
+    justify-content: center; 
+    width: 175vh !important; 
+    height: 80vh !important; 
+    margin: 0 auto !important;
+    top: 7vh;
 }
 
 .tab-container {
